Agrege lo de permisos a ciertos usuarios

--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -23,8 +23,10 @@
 
     <ul id="dropdown1" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      <li><a href="#!">Mis posts</a></li>
-      <li><a href="#!">Escribir Post</a></li>
+      {% if perms.Post.add_Post %}
+        <li><a href="#!">Mis posts</a></li>
+        <li><a href="#!">Escribir Post</a></li>
+      {% endif %}
       <li class="divider"></li>
       <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
  Log out</a></li>
@@ -32,8 +34,10 @@
 
     <ul id="dropdown2" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      <li><a href="#!">Mis posts</a></li>
-      <li><a href="#!">Escribir Post</a></li>
+      {% if perms.Post.add_Post %}
+        <li><a href="#!">Mis posts</a></li>
+        <li><a href="#!">Escribir Post</a></li>
+      {% endif %}
       <li class="divider"></li>
       <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
  Log out</a></li>
