--- a/BlogComputacion/blog/templates/blog/crear_post.html
+++ b/BlogComputacion/blog/templates/blog/crear_post.html
@@ -1,6 +1,6 @@
 {% block content %}
 
-<form method="post">
+<form action = "{% url 'create' %}" method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="button" name="button">Enviar</button>
