--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -33,7 +33,8 @@
         <li><a href="#!">Escribir Post</a></li>
       {% endif %}
       <li class="divider"></li>
-      <li><a href="{% url 'logout' %}">Log out</a></li>
+      <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+ Log out</a></li>
     </ul>
 
     <ul id="dropdown2" class="dropdown-content">
@@ -43,17 +44,22 @@
         <li><a href="#!">Escribir Post</a></li>
       {% endif %}
       <li class="divider"></li>
-      <li><a href="{% url 'logout' %}">Log out</a></li>
+      <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
+ Log out</a></li>
     </ul>
 
     <nav class="blue main-nav" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo">Logo</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo"><img src="{% static 'blog/img/logo2.png' %}" alt="" class="responsive-img"> <span class="logo-text">p entonces q</span></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="{% url 'contact' %}">Contactanos</a></li>
-          <li><a href="{% url 'showAll' %}">Todos los posts</a></li>
+          <li><a href="{% url 'contact' %}"><i class="fa fa-envelope" aria-hidden="true"></i>
+ Contactanos</a></li>
+          <li><a href="{% url 'showAll' %}"><i class="fa fa-list" aria-hidden="true"></i>
+ Todos los posts</a></li>
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'registrar' %}">Sign Up</a></li>
-          <li><a href="{% url 'login' %}">Log In</a></li>
+          <li><a href="{% url 'registrar' %}"><i class="fa fa-user-plus" aria-hidden="true"></i>
+ Sign Up</a></li>
+          <li><a href="{% url 'login' %}"><i class="fa fa-sign-in" aria-hidden="true"></i>
+ Log In</a></li>
           {% else %}
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Mi cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
           {% endif %}
@@ -65,7 +71,7 @@
           <li><a href="{% url 'registrar' %}">Sign Up</a></li>
           <li><a href="{% url 'login' %}">Log In</a></li>
           {% else %}
-          <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Mi cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Mi cuenta<i class="material-icons right">arrow_drop_down</i></a></li>
           {% endif %}
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
