IMPORTANTE, INSTALA DJANGO TWEAK TOOLS...... acomode el formulario para que mostrara errores y tuviera una mejor presentacion, no teque el forms.py solo el template

--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -25,7 +25,7 @@
       <li><a href="#!">Mi perfil</a></li>
       {% if perms.Post.add_Post %}
         <li><a href="#!">Mis posts</a></li>
-        <li><a href="#!">Escribir Post</a></li>
+        <li><a href="{% url 'create' %}">Escribir Post</a></li>
       {% endif %}
       <li class="divider"></li>
       <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i>
