--- a/BlogComputacion/blog/templates/blog/pages/crear_post.html
+++ b/BlogComputacion/blog/templates/blog/pages/crear_post.html
@@ -1,24 +1,24 @@
 {% extends 'blog/main2.html' %}
 {% load widget_tweaks %} <!-- Cargo las nuevas funcionalidades de la app que descarge -->
 {% block content %}
-<div class="card">
-  <div class="card-content">
-    <h3 class="center">Crea tu post</h3>
-    <div class="divider"></div>
-    <br>
-    <br>
     <div class="row">
       <form action = "{% url 'create' %}" method="post" enctype="multipart/form-data" class="col s12 m8 offset-m2"> <!-- Aqui era enctype el problema -->
+        <div class="card">
+          <br>
+          <br>
+          <h3 class="center">Crea tu post</h3>
+          <div class="divider"></div>
+          <div class="card-content">
         {% csrf_token %}
         {% with WIDGET_ERROR_CLASS='invalid' %}
         <div class="input-field">
           {% render_field form.title class+="validate" %}
-          <label for="{{form.title.name}}" data-error="{% for error in form.title.errors %} {{error}} {% endfor %}">{{form.title.label}}</label>
+          <label for="{{form.title.id_for_label}}" data-error="{% for error in form.title.errors %} {{error}} {% endfor %}">{{form.title.label}}</label>
         </div>
         <br>
         <div class="input-field">
           {% render_field form.text class+="materialize-textarea validate"%}
-          <label for="{{form.title.text}}" data-error="{% for error in form.text.errors %} {{error}} {% endfor %}">{{form.text.label}}</label>
+          <label for="{{form.text.id_for_label}}" data-error="{% for error in form.text.errors %} {{error}} {% endfor %}">{{form.text.label}}</label>
         </div>
         <br>
         <div class="input-field">
