Acomode el titulo de la pagina, ahora se centra mucho mejor ne pantallas pequeñas

--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -103,8 +103,8 @@ nav.main-nav
   text-align: center;
   position:relative;
   z-index: 1;
-  width:50%;
-  margin:auto;
+  /*width:50%;*/
+  /*margin:auto;*/
 }
 .banner-content h1
 {
