Agregue etiqueta de "nuevo" a los posts del inicio :)

--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -68,6 +68,9 @@
       <div class="card z-depth-2">
         <div class="card-image">
             <img src="{% static 'blog/img/django.jpg' %}">
+            <div class="nuevo">
+              <span>Nuevo</span>
+            </div>
         </div>
         <div class="card-content">
           <p class="card-info grey-text">
