--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -345,3 +345,79 @@ a.article-link:hover
 {
   color: #2196F3;
 }
+
+.nuevo
+{
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  letter-spacing: 2px;
+
+}
+
+.nuevo::before,
+.nuevo::after {
+  position: absolute;
+  z-index: -1;
+  content: '';
+  display: block;
+  border: 5px solid #2980b9;
+  border-top-color: transparent;
+  border-left-color: transparent;
+
+}
+
+.nuevo span {
+  position: absolute;
+  display: block;
+  width: 225px;
+  padding: 15px 0;
+  background-color: #3498db;
+  box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  color: #fff;
+  font: 700 18px/1 'Lato', sans-serif;
+  text-shadow: 0 1px 1px rgba(0,0,0,.2);
+  text-transform: uppercase;
+  text-align: center;
+  right: -25px;
+  top: 30px;
+  transform: rotate(-45deg);
+
+}
+.nuevo::before {
+  top: 0;
+  right: 0;
+}
+.nuevo::after {
+  bottom: 0;
+  left: 0;
+}
+
+
+
+/*.nuevo::before
+{
+  content:"";
+  position:absolute;
+  background: black;
+  top:30px;
+  left:-20px;
+  padding:20px;
+  width:50%;
+  height:50%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  color:white;
+  z-index:-2;
+  transform: rotate(45deg);
+}*/
+
+
+.card
+{
+  overflow:visible !important;
+}
