--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -77,7 +77,7 @@
 
 
     <div class="main-banner">
-      <div class="banner-content">
+      <div class="banner-content center">
         <h1>Blog de Computacion</h1>
         <h5>Por estudiantes - Para estudiantes</h5>
       </div>
