Solucione un par de errores... lista a continuacion:
1. no existe blog:showOne, ya que no tenemos namespace llamado blog.
Lo deje como showOne (models.py)

2. en el template el action del formulario era create, por lo tanto
cada vez que enviabas el formulario se enviaba a "create"
de ahi que se creara un post cada vez que llenabas el formulario, le quite
el action haciendo asi que cada vez que se envie el formulario este se envie
a la direccion actual, asi si se usa el template desde /create_post se enviara
a si misma y funcionara, y en caso contrario que se envie a /post/id/edit
tambien se enviara a si misma y tambien funcionara

3. cambie el HttpResponseRedirect por un redirect, es redundante tener ambas cosas
y le pase "instance" como argumento, el sabe que tiene que llamar al get_absolute_url

4. borre el instance.save() es redundante si ya  hiciste un form.save()
el instance = form.save() solo se mantiene para poder despues pasar la instance
al redirect, como ya habia pasado anteriormente en el caso de create.

5. Agregue la validacion de "request.method == 'POST'" por cuestiones de seguridad,
aunque sin ella funcionaba

--- a/BlogComputacion/blog/templates/blog/pages/crear_post.html
+++ b/BlogComputacion/blog/templates/blog/pages/crear_post.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %} <!-- Cargo las nuevas funcionalidades de la app que descarge -->
 {% block content %}
     <div class="row">
-      <form action = "{% url 'create' %}" method="post" enctype="multipart/form-data" class="col s12 m8 offset-m2"> <!-- Aqui era enctype el problema -->
+      <form method="post" enctype="multipart/form-data" class="col s12 m8 offset-m2"> <!-- Aqui era enctype el problema -->
         <div class="card">
           <br>
           <br>
