Ya tiene lo de los permisos

--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -5,6 +5,7 @@
 <h3>{{ post.title }}</h3>
 
 <p>{{ post.text }}</p>
-
-<a href="{% url 'update' post.id %}">Editar</a>
+{% if perms.Post.add_Post %}
+  <a href="{% url 'update' post.id %}">Editar</a>
+{% endif %}
 {% endblock %}
