--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -88,22 +88,16 @@
 
 
     <script type="text/javascript">
-    $("document").ready(function(){
-      $(".button-collapse").sideNav();
-      $('.dropdown-button').dropdown();
-      $('.modal').modal();
-
-      {% if form.errors %}
-        {% for field in form %}
-          {% for error in field.errors %}
-            Materialize.toast("{{error|escape}}", 4000)
-          {% endfor %}
-        {% endfor %}
-      {% endif %}
-
-
+    $(document).ready(function(){
+      $(".content-markdown").each(function()){
+          var content = $(this).text()
+          console.log(content)
+          var markedContent = marked(content)
+          console.log(msrkedContent)
+          $(this).html(markedContent)
+  
+      })
     });
-
 
     </script>
   </body>
