Arregle los permisos. estaban mal escritos, dejo link de documentacion https://docs.djangoproject.com/en/1.11/topics/auth/default/#default-permissions
Re puse lo que me borraste de los scripts, solo pedi que borraras los ifs jajajajaa
creo que no hice mas nada pero me puedo equivocar :C

--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -23,7 +23,7 @@
 
     <ul id="dropdown1" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      {% if perms.Post.add_Post %}
+      {% if perms.blog.add_post %}
         <li><a href="#!">Mis posts</a></li>
         <li><a href="{% url 'create' %}">Escribir Post</a></li>
       {% endif %}
@@ -33,7 +33,7 @@
 
     <ul id="dropdown2" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      {% if perms.Post.add_Post %}
+      {% if perms.blog.add_post %}
         <li><a href="#!">Mis posts</a></li>
         <li><a href="{% url 'create' %}">Escribir Post</a></li>
       {% endif %}
