--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -2,10 +2,13 @@
 
  {% block content %}
  <img src="{{ post.cover.url }}" alt="" class="responsive-img">
-<h3>{{ post.title }}</h3>
+ <div>
+   <small>Por {{post.author.username}}, publicado: {{post.created_at}}</small>
+   <h3>{{ post.title }}</h3>
 
-<p>{{ post.text }}</p>
-{% if perms.Post.add_Post and post.user == user %}
-  <a href="{% url 'update' post.id %}">Editar</a>
+   <p>{{ post.text }}</p>
+ </div>
+{% if perms.Post.add_Post and post.author == user %}
+  <a href="{% url 'update' post.id %}" class="btn blue white-text">Editar</a>
 {% endif %}
 {% endblock %}
