--- a/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
@@ -3,10 +3,17 @@
 
 <h3>Todos los posts: </h3>
 
+<h1>SI</h1>
+
 {% for entrada in object_list %}
   <img src="{{ entrada.cover.url }}" alt="" class="responsive-img">
-  <h5><a href="{{ entrada.id }}">{{ entrada.title }}</a></h5>
-  <p>{{ entrada.text }}</p>
+  <div>
+    <small>Por {{entrada.author.username}}, publicado: {{entrada.created_at}}</small>
+    <br>
+    <h5><a href="{{ entrada.id }}">{{ entrada.title }}</a></h5>
+    <p>{{ entrada.text }}</p>
+
+  </div>
 {% endfor  %}
 <br>
 <br>
