--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -133,19 +133,18 @@
 
 
 
-
        <div class="card z-depth-2">
          <div class="card-image">
            <img src="{% static 'blog/img/unity.jpg' %}">
          </div>
          <div class="card-content">
-           <p class="card-info grey-text">
-             <small>
-               <span class="left">Por David</span> <span class="right">4 de abril del 2016</span>
-             </small>
-           </p>
            <a href="#!" class="article-link"><p class="title"><h5>Desarrollo de Videojuegos en Unity</h5></p></a>
            <div class="divider"></div>
+           <p class="card-info grey-text">
+             <small>
+               <span class="left">Por David. posted: 4 de abril del 2016</span>
+             </small>
+           </p>
            <div class="section">
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab tempora hic cum aperiam perferendis sequi, eum officiis nihil, aut, aliquid consequatur quidem necessitatibus deleniti rerum eaque neque porro cupiditate nulla!</p>
            </div>
