--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -27,7 +27,7 @@
 
     <ul id="dropdown1" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      {% if perms.Post.add_Post %}
+      {% if perms.blog.add_post %}
         <li><a href="#!">Mis posts</a></li>
         <li><a href="{% url 'create' %}">Escribir Post</a></li>
       {% endif %}
@@ -37,7 +37,7 @@
 
     <ul id="dropdown2" class="dropdown-content">
       <li><a href="#!">Mi perfil</a></li>
-      {% if perms.Post.add_Post %}
+      {% if perms.blog.add_post %}
         <li><a href="#!">Mis posts</a></li>
         <li><a href="{% url 'create' %}">Escribir Post</a></li>
       {% endif %}
@@ -48,11 +48,11 @@
     <nav class="blue main-nav" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="{% url 'index' %}" class="brand-logo"><img src="{% static 'blog/img/logo2.png' %}" alt="" class="responsive-img"> <span class="logo-text">p entonces q</span></a>
         <ul class="right hide-on-med-and-down nav-ul">
-          <li><a href="{% url 'contact' %}"><i class="fa fa-envelope" aria-hidden="true"></i>Contactanos</a></li>
-          <li><a href="{% url 'showAll' %}"><i class="fa fa-list" aria-hidden="true"></i>Todos los posts</a></li>
+          <li><a href="{% url 'contact' %}"><i class="fa fa-envelope" aria-hidden="true"></i> Contactanos</a></li>
+          <li><a href="{% url 'showAll' %}"><i class="fa fa-list" aria-hidden="true"></i> Todos los posts</a></li>
           {% if not user.is_authenticated %}
-          <li><a href="{% url 'registrar' %}"><i class="fa fa-user-plus" aria-hidden="true"></i>Sign Up</a></li>
-          <li><a href="{% url 'login' %}"><i class="fa fa-sign-in" aria-hidden="true"></i>Log In</a></li>
+          <li><a href="{% url 'registrar' %}"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a></li>
+          <li><a href="{% url 'login' %}"><i class="fa fa-sign-in" aria-hidden="true"></i> Log In</a></li>
           {% else %}
           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Mi cuenta <i class="material-icons right dropdown-navbar">arrow_drop_down</i></a></li>
           {% endif %}
@@ -93,15 +93,18 @@
       $(".button-collapse").sideNav();
       $('.dropdown-button').dropdown();
       $('.modal').modal();
+      $('select').material_select();
 
-      $(".content-markdown").each(function()){
-          var content = $(this).text()
-          console.log(content)
-          var markedContent = marked(content)
-          console.log(msrkedContent)
-          $(this).html(markedContent)
 
-      })
+
+      // $(".content-markdown").each(function()){
+      //     var content = $(this).text()
+      //     console.log(content)
+      //     var markedContent = marked(content)
+      //     console.log(msrkedContent)
+      //     $(this).html(markedContent)
+      //
+      // })
     });
 
     </script>
