--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -21,27 +21,11 @@
         position:relative;
       }
 
-      /*.hljs-line-numbers {
-      	text-align: right;
-      	border-right: 1px solid #ccc;
-      	color: #A3A49C;
-      	-webkit-touch-callout: none;
-      	-webkit-user-select: none;
-      	-khtml-user-select: none;
-      	-moz-user-select: none;
-      	-ms-user-select: none;
-      	user-select: none;
+      select
+      {
+        display:block;
       }
 
-      .hljs
-      {
-        padding:0 10px;
-        background:transparent;
-      }*/
-      /*pre
-      {
-        background-color: #23241F;
-      }*/
 
     </style>
 
@@ -122,7 +106,7 @@
       $(".button-collapse").sideNav();
       $('.dropdown-button').dropdown();
       $('.modal').modal();
-      $('select').material_select();
+      // $('select').material_select();
 
 
 
@@ -137,14 +121,19 @@
           console.log(markedContent)
           $(this).html(markedContent)
 
-
       });
       // $('code').each(function(i,block){
       //   hljs.lineNumbersBlock(block);
       // });
       $('pre').each(function(){
         $(this).addClass('hljs');
-      })
+      });
+
+      // $('select').each(function(){
+      //   $(this).addClass('browser-default');
+      // });
+
+
 
     });
 
