--- a/BlogComputacion/blog/templates/blog/pages/crear_post.html
+++ b/BlogComputacion/blog/templates/blog/pages/crear_post.html
@@ -37,6 +37,8 @@
           <label for="{{form.title.id_for_label}}" data-error="{% for error in form.title.errors %} {{error}} {% endfor %}">{{form.title.label}}</label>
         </div>
         <br>
+        <p><b>IMPORTANTE.</b> la vista previa mostrada en este formulario no es un aproximado a como se vera en el blog, pero puede variar, siempre verificar la vista en detalle</p>
+        <br>
         <div id="editormd">
           {% render_field form.text style='display:none;' %}
         </div>
@@ -100,6 +102,8 @@
                 this.resize();
             }
         });
+
+
     });
 </script>
 {% endblock %}
