--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -1,15 +1,26 @@
 {% extends 'blog/main2.html' %}
 
+{%block title%} {{post.title}} {%endblock%}
 
- {% block content %}
- <img src="{{ post.cover.url }}" alt="" class="responsive-img">
- <div>
-   <small>Por {{post.author.username}}, publicado: {{post.created_at}}</small>
-   <h3>{{ post.title }}</h3>
+{% block content %}
+ <div class="row">
+   <div class="col s12">
+     <div class="card">
+       <div class="card-image">
+         <img src="{{ post.cover.url }}" alt="" class="responsive-img">
+       </div>
+       <div class="card-content">
+         <p clsas="grey-text">Por {{post.author.username}}, publicado: {{post.created_at}}</p>
+         <h2>{{ post.title }}</h2>
 
-   <p class="content-markdown">{{ post.text }}</p>
+         <div class="content-markdown post-body">{{ post.text }}</div>
+         <br>
+         <br>
+         {% if perms.Post.add_Post and post.author == user %}
+         <a href="{% url 'update' post.id %}" class="btn blue white-text">Editar</a>
+         {% endif %}
+       </div>
+     </div>
+   </div>
  </div>
-{% if perms.Post.add_Post and post.author == user %}
-  <a href="{% url 'update' post.id %}" class="btn blue white-text">Editar</a>
-{% endif %}
 {% endblock %}
