Cambie la font de los <code>

--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -458,5 +458,5 @@ code
   border-radius:3px;
   padding:3px;
   color:#2196F3;
-  font-family: 'Space mono';
+  font-family: 'Nova Mono'!important;
 }
